<?php


namespace App\PaymentSystem;


class WebMoney implements PaymentSystem
{

    public function generateLink($params)
    {
        // TODO: Implement generateLink() method.
    }

    public function getPayInfo($params)
    {
        // TODO: Implement getPayInfo() method.
    }
}