<?php


namespace App\PaymentSystem;


class YandexMoney implements PaymentSystem
{

    public function generateLink($params)
    {
        // TODO: Implement generateLink() method.
    }

    public function getPayInfo($params)
    {
        // TODO: Implement getPayInfo() method.
    }
}